P01-Style Guide/css/main.css
  STYLE GUIDE STYLING 
  Default styling for the style guide 
*/
@import url('https://fonts.googleapis.com/css?family=Avenir');
@import url('https://fonts.googleapis.com/css?family=Lato');

*, *::after, *::before {
    box-sizing:border-box;
}

body {
  font-family: "Lato", sans-serif;
  background-color: rgb(255,244,230);
  font-color: rgb(60,47,47);
    width: 100%;  
    height: 100%; 
    margin: 0;
}

html {
    width: 100%;  
    height: 100%; 
    margin: 0;
}

div{

}

.totals{
  font-size: 1.5rem;  
}

button{
  text-transform: uppercase;
  cursor: pointer;
}

.button-navi{
  letter-spacing: 0.15rem;
  padding-top:1rem;
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.header{
  font-size: 3rem;
  position: fixed;
  top:4rem;
  margin-left: 2rem;
}

header{
  padding-bottom: 3rem;
}

.left{
  margin-top: 5rem;
}

.center-content{
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 8rem;
}

.checkright{
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  flex-wrap: wrap;
  margin-left: 20rem;
}

.right div{
  padding: 2rem;

  border-width: .1rem;
  border-color: #9b6d4f;
}

.header{
  font-size: 2rem;
  letter-spacing: .2rem;
}

.pagenav{
  position:fixed;
}

.button-navi:hover, .button-navi:focus{

}

.grid{
  flex:1;
  max-width: 25rem;
  min-width: 25rem;
  margin-right: 2rem;
  margin-left: 2rem;

}

.grid2{
  flex:2;
  min-width: 40rem;
  margin-left: 2rem;
  margin-right: 2rem;
}

.grid3{
  transform: translate(0,-6rem);
  flex:1;
  font-size: 1.5rem;
  min-width: 25rem;
  max-width: 30rem;
}

li a{
  display: block;
  padding: 0.5rem 2px;
  text-decoration: none;
}

ul{
  background-color: rgb(255,250,240);
  border-style: dashed;
  border-radius: 0rem;
  border-color: rgb(66,50,50);
  border-width: 0.1rem;
  list-style-type: none;
  width:15rem;
  margin: 0;
  padding: 1.5rem;

}

.element {
  max-width: 50%;
  padding-bottom: 3rem;
  padding-top:3rem;
  border-top-width: 0.15rem;
  border-top-style: solid;
  border-top-color: black;
}

.textlink{
  text-decoration: underline;
}

.billbutt{
  margin-left:86%; 
  margin-right: 0;
  margin-top: 0;
}

button{
  display: inline-block;
  font-size: .75rem;
  padding: 1rem;
  padding-left: 2rem;
  padding-right: 2rem;
  color: white;
  background-color: rgb(66,50,50);
  text-decoration: none;
  transition-property: background-color; 
  transition-duration: 0.5s;
  border-style: none;
}

.edit, .remove{
  padding:5px 10px;
  background-color: rgb(150, 120, 110);
}

.imagelink:hover{
  opacity: 0.7;
  transition-duration: 0.5s;

}

button:hover, button:focus{
  background-color: rgb(170,130,110);
}

.billing{
  align-content: center;
  padding:2rem;

  max-width: 30rem;
  min-width: 30rem;
  margin-right: 5rem;
  box-sizing:border-box;
  border-color: rgb(100,45,45);
  
}

.months{
  width:57%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
}
.year{
  width:40%;
  padding:10px 10px;
  margin:15px 0;
  float: right;
  box-sizing:border-box;

}


input[name=fn]{
  width:49%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
}

input[name=ln]{
  width:49%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
  float:right;
}

input[name=email]{
  width:100%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
}

input[name=cc]{
  width:80%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
}

input[name=ccv]{
  align-self: right;
  width:17%;
  padding:10px 10px;
  margin:15px 0;
  float: right;
  box-sizing:border-box;
}

input[name=ccn]{
  width:100%;
  padding:10px 10px;
  margin:15px 0;
  box-sizing:border-box;
}

h2 {
  margin-top: 1rem;
}

h3 {
}

h4 {
  margin-bottom: 0.25rem;
}

.bodyp {
  padding-right: 2rem;
  padding-left: 2rem;
  line-height: 1.7rem;
  margin-top: 0;
}

.prices{
  text-align: right;
}

.rightalign{
  font-size: 1.25rem;
  text-align: right;
}

.add{
  transform: translate(0rem, -4.5rem);
}

.rightalignbutt{
  float:right;
}

.item{
  border-top-style: solid;

  border-color: rgb(100,45,45);
}

.itemprice{
  width:75%;
  padding:0px;
  text-align: right;
}

p{
  padding-top: .5rem;
   margin-top: 0px;

}

img{
  width:100%;
}

img:hover{
  transition-duration: 0.5s;
}

a{
    color: rgb(133,68,66);
    text-decoration: none;
}

nav{
   padding-bottom: 1.5rem;
   padding-top: 1.5rem;
   text-align: center;
   /*z-index added to make nav bar on top of all other elements*/
   z-index: 500;
   width: 100%;
   background: rgb(255,244,230); 
   position: fixed;
   top: 0;
}

nav a{
  text-align: center;
  padding: 1.5rem;
  letter-spacing: 1px;
  font-size: 0.8rem;
}

nav a:hover, nav a:focus {
  color: #eee3ce;
  text-decoration: none;
}


nav a:hover, nav a:focus {
  color: rgb(75,56,50);
  transition-duration: .5s;
}

code {
  background-color: rgb(255);
  padding: 0.5rem;
  display: block;
}

.bg-image{
   background: url('../menu-img.jpg');
   background-repeat: no-repeat;
   background-size:cover;
   background-position: center;
}

.bg-image.one{

}

.light-text{
  color: rgb(255,244,230);
  padding-top: .5rem;
  max-width: 40%;
  min-width: 30%;
}

.middletitle{
    position: absolute;
    top: 30%;
    left: 30%;
    transform: translateX(-50%) translateY(-50%);
}

.middletext{
    position: absolute;
    top: 50%;
    left: 30%;
    transform: translateX(-50%) translateY(-50%);
}

.container{
   display: -webkit-flexbox;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    justify-content: center;
}

  .column-half{
    display: flex;
    justify-content: space-between;
  }

  .image-holder-div {
  position: absolute;
  background-color: white;
  padding: 15px;
}

/*added responsivness to main page image placement*/

@media only screen and (max-width: 1000px) {
  .column-half{
    display: block;
    justify-content: space-between;
  }

  .equalHW img{
    max-height: 50vh;
  }

/*apply class twice in order to override settings applied for more than 1000px*/
  .equalHW.equalHW p{
    line-height: 1.7rem;
    max-width: 85%;
    margin-bottom: 1.5rem;
  }
  
 /*apply class twice in order to override settings applied for more than 1000px*/
   .equalHW.equalHW h3{
    margin-top: 1.5rem;
  }
} 

/*making the text centered in the div*/
.equalHW {
    flex: 1;
    display: flex;
    flex-direction: column;
  }

  .equalHW h3{
    margin-top: 0;
  }

  .equalHW p{
    line-height: 1.7rem;
    max-width: 85%;
    margin-bottom: 0;
  }

  .equalHW img{
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .texta{
    width:49%;
    box-sizing: border-box;
  }

  .centered-text{
    text-align: center;
    justify-content: center;
    align-items: center;
  }

  .text-overlay{
    width: 100%
    height:100%;
  }

  .text-overlay div{
    position:absolute; height:100%; width:100%;
    display: table;
  }

  .text-display h3, .text-display p{
    display: table-cell;
    vertical-align: middle;
    text-align:center;
  }

  /*clickable images css*/
.linkimage{
  transition: 0.5s ease;
  cursor: pointer;
  object-fit: contain;
}

.linkimage:hover, .linkimage:active{
  opacity: 0.5;
}

.linkimage:focus{
  opacity:0.75;
}
/* 
  INTERACTIVE ELEMENTS -------------------
*/


/* 
  TEXT ELEMENTS -------------------
*/




/* 
  COMBINED ELEMENTS -------------------

